# Min-Packing

./: CMakeLists.txt  Coding.py  Makefile  README.md  Test.py  a.txt  batching_encrypted_comparing.cpp  data.txt  lsic_test.cpp  main.cpp  paillier.py  seal_encrypted_comparing.cpp  seal_lsic.cpp  seal_lsic.h  test.cpp
coding/: CMakeLists.txt  decoding.cpp  decoding.h  encoding.cpp  encoding.h
decoding/: m1.txt
encoding/: CMakeLists.txt  decoding.cpp
paillier/: CMakeLists.txt  encrypted_comparing.c  encrypted_comparing.h  lsic.c  lsic.h  paillier.c  paillier_manage_keys.c
seal-part/: CMakeLists.txt  examples.h  main.cpp
src/: encrypted_comparing.c  encrypted_comparing.h  lsic.c  lsic.h  main.c
